[package]
name = "hisparc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
json = "0.12.4"
serde = { version = "1.0.163", features = ["derive"] }
