[package]
name = "hisparc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
json = "0.12.4"
serde = { version = "1.0.163", features = ["derive"] }
lazy_static = "1.4.0"
anyhow = "1.0.71"
once_cell = "1.17.1"
chrono = { version = "0.4.26", features = ["std", "alloc", "clock"] } 
